Final version 1.0 --README DOCUMENT READY-MOD

--- a/README
+++ b/README
@@ -7,7 +7,7 @@ Contact data:
     molkamateuszjanusz@gmail.com
 
 
----------------------------------------------------------------------------------------------------
+-------------------------------------------------------------------------------------------------
 1. GENERAL NOTES
 
     ******************************
@@ -20,13 +20,15 @@ Contact data:
         -JavaScript File, which is "custom.js". PATH: "../StrazPozarna/js/custom.js"
         -README File. PATH: "../StrazPozarna/README"
     ****************************** 
----------------------------------------------------------------------------------------------------
+-------------------------------------------------------------------------------------------------
 2. BROWSER REQUIREMENTS
 
     ******************************
-    - The best performence with the browser: Google Chrome 57 or Mozilla Firefox 52 under Ubuntu 16.06
+    - The best performence with the browser: Google Chrome 57 or Mozilla Firefox 52 under
+    Ubuntu 16.06
     ****************************** 
-    - The main feature of the application is file upload (JavaScript "FileReader()") which is supported by following browsers, according 
+    - The main feature of the application is file upload (JavaScript "FileReader()") which is
+    supported by following browsers, according 
     to the feature's author documentation:
         -IE 10+
         -FIREFOX 3.6+
@@ -34,24 +36,27 @@ Contact data:
         -SAFARI 6.0+ 
         -OPERA 11.1+ 
     ****************************** 
-    !! ATTENTION !! The application was developed under Ubuntu 16.06 so it wasn't possible for the author
-    to check the application with all commonly used browsers. If there are any mark up's please contact 
-    the author via e-mail (Given above). 
+    !! ATTENTION !! The application was developed under Ubuntu 16.06 so it wasn't possible for
+    the author to check the application with all commonly used browsers. If there are any mark
+    up's please contact the author via e-mail (Given above). 
     ******************************
     
----------------------------------------------------------------------------------------------------
+-------------------------------------------------------------------------------------------------
 2. INSTALATION & USAGE
 
     ******************************
-    - To start application DOUBLE CLICK on the index.html file and browser will open the program automatically.
-    If this doesn't work or you don't want to open the application in your default browser type into your 
-    browser: "file:///**YOUR CURRENT PATH**/StrazPozarna/index.html".
+    - To start application DOUBLE CLICK on the index.html file and browser will open the 
+    program automatically.
+    -If this doesn't work or you don't want to open the application in your default browser
+    type into your browser: "file:///**YOUR CURRENT PATH**/StrazPozarna/index.html".
     ******************************
-    - To make application perform, one has to upload file with the data. The program user will be asked for it.
+    - To make application perform, one has to upload file with the data. The program user
+    will be asked for it.
     ******************************
     - Data can be inserted into the application ONLY with the usage of ".JSON" file.
     ******************************
-    - ".JSON" file with the desired data has to store JSON Object with the following structure:
+    - ".JSON" file with the desired data has to store JSON Object with the following
+    structure:
         {
             "miasta" : [
                             {
@@ -71,9 +76,10 @@ Contact data:
     ******************************
     !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
     
-    !! ATTENTION !! THERE IS ALREADY PREPARED .JSON FILE UNDER THE PATH: "../StrazPozarna/data.json".
-    IN THE FILE THERE IS EXAMPLE OF THE DATA WHICH ARE SUITABLE FOR THE PROGRAM. THE DATA CAN BE USED,
-    MODIFIED ETC. TO CHECK HOW THE APPLICATION WORKS.
+    !! ATTENTION !! THERE IS ALREADY PREPARED .JSON FILE UNDER THE PATH:
+    "../StrazPozarna/data.json". IN THE FILE THERE IS EXAMPLE OF THE DATA WHICH 
+    ARE SUITABLE FOR THE PROGRAM. THE DATA CAN BE USED, MODIFIED ETC. TO CHECK 
+    HOW THE APPLICATION WORKS.
     
     !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
     ******************************
@@ -83,12 +89,13 @@ Contact data:
     - The data will be processed and shown in sections: 
         - Enter new data
         - Critical time- the maximum time for the operation will be shown
-        - Black list- list of cities that are in danger which means: have no fire brigade and 
-        cannot be reached from any other city in given critical time
+        - Black list- list of cities that are in danger which means: have no 
+        fire brigade and cannot be reached from any other city in given critical
+        time
         - Cities report- detailed report of every city
     ******************************
 
----------------------------------------------------------------------------------------------------
+-------------------------------------------------------------------------------------------------
 3. TECHNOLOGIES USED
     
     ******************************
@@ -106,7 +113,7 @@ Contact data:
         * Google fonts
     
     
----------------------------------------------------------------------------------------------------
+-------------------------------------------------------------------------------------------------
 4. LICENCE
 
     Original work Copyright 2017 Mateusz Molka
@@ -121,5 +128,5 @@ Contact data:
     The above copyright notice and this permission notice shall be included in
     all copies or substantial portions of the Software.
     
----------------------------------------------------------------------------------------------------
+-------------------------------------------------------------------------------------------------
 
